--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -6,7 +6,7 @@ $black: #000;
 $white: #fff;
 $light-gray: #f1f1f1;
 
-$body-background-color: #333;
+$body-background-color: #363c4f;
 $foreground-color: #fff;
 $caption-color: #464646;
 $accent-color: #999;
