--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -3,8 +3,11 @@
 }
 .container {
   display: flex;
+  height: 200px;
 }
 .slide {
+  transform: translate3d(0, 0, 0);
   flex: 0 0 100%;
-  min-width: 0;
+  min-height: 0;
+  padding-top: 0rem;
 }
