--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
+@font-face {
+  font-family: "League Gothic";
+  src: url("./fonts/leaguegothic-regular-webfont.eot");
+  src: url("./fonts/leaguegothic-regular-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./fonts/leaguegothic-regular-webfont.woff") format("woff"),
+    url("./fonts/leaguegothic-regular-webfont.ttf") format("truetype"),
+    url("./fonts/leaguegothic-regular-webfont.svg#league_gothicregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "League Gothic", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
