--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,5 +1,23 @@
 .header {
-    h1 {
-        font-size: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h1 {
+    font-size: 70px;
+    position: relative;
+    width: fit-content;
+    height: 66px;
+    line-height: 58px;
+    color: #6ddba9;
+    &:before {
+      content: "";
+      width: 100%;
+      height: 2px;
+      background-color: transparent;
+      position: absolute;
+      right: 0;
+      top: 52px;
+      box-shadow: 0 2px 0px 0px #363c4f, 0 3px 0px 0px #363c4f;
     }
+  }
 }
