--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -10,22 +10,27 @@
     letter-spacing: 1px;
     line-height: 58px;
     color: #6ddba9;
-    color: #363c4f;
     animation-name: title;
     animation-duration: 150ms;
+    animation-iteration-count: 10;
     &:before,
     &:after {
       content: "";
-      width: 100%;
+      width: calc(100% - 5px);
       height: 4px;
       background-color: transparent;
       position: absolute;
-      right: 0;
+      right: 3px;
       background-color: #363c4f;
-      transform: scale3d(1,1,1);
+      animation-name: titleArrow;
+      animation-duration: 180ms;
+      animation-iteration-count: 1;
+      animation-timing-function: linear;
+      animation-delay: 1200ms;
     }
     &:before {
       bottom: 13px;
+
     }
     &:after {
       top: 9px;
@@ -34,16 +39,17 @@
       position: absolute;
       top: 14px;
       left: 4px;
-      width: 615px;
+      width: 614px;
       height: 38px;
       background-color: #fff;
       transform: translate3d(0,0,0);
       opacity: 0;
       z-index: -2;
       animation-name: titleBg;
-      animation-duration: 250ms;
-      animation-iteration-count: 2;
-      animation-timing-function: random($limit: 2);
+      animation-duration: 1250ms;
+      animation-iteration-count: 1;
+      animation-timing-function: linear;
+
     }
     @keyframes title {
       0% {
@@ -53,41 +59,59 @@
         color: #363c4f
       }
       100% {
-        color: #6ddba9;
+        color: #363c4f;
       }
     }
     @keyframes titleBg {
       0% {
-        opacity: 0;
-        // transform: translate3d(3px, 1px, 0px);
-      }
-      2% {
-        opacity: 0.3;
-        // transform: translate3d(0px, 0px, 0px);
-      }
-      6% {
         opacity: 0.8;
-        // transform: translate3d(10px, 10px, 0px);
+      }
+      8% {
+        opacity: 0.8;
       }
       12% {
-        opacity: 0.3;
+        opacity: 0.8;
+        background-color: #000;
       }
-      25% {
-
+      21% {
+        opacity: 0.8;
+        background-color: #000;
       }
-      37% {
-
+      22% {
+        opacity: 0.8;
+        background-color: #00f;
+      }
+      31% {
+        opacity: 0.8;
+        background-color: #00f;
+      }
+      32% {
+        opacity: 0.8;
+        background-color: #f00;
+      }
+      39% {
+        opacity: 0.8;
+        background-color: #f00;
+      }
+      40% {
+        opacity: 0.8;
+        background-color: #0f0;
       }
       48% {
-
+        opacity: 0.8;
+        background-color: #0f0;
       }
-      60% {
-
+    }
+    @keyframes titleArrow {
+      0% {
+        background-color: #fff;
+      }
+      50% {
+        background-color: transparent;
       }
       100% {
-
+        background-color: #fff;
       }
-      
     }
   }
 }
