--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -1,5 +1,25 @@
-.card-container {
-    background: #000;
+.card {
+  background-color: #000000f0;
+  width: 380px;
+  height: 296px;
+  overflow: hidden;
+  position: relative;
+  transform: translate3d(4px, 7px, 0px);
+  .cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-    width: 400px;
+    background-size: cover;
+    transform: scale3d(1.4, 1.4, 1);
+    filter: invert(0.6) blur(0.3px);
+    opacity: 0.3;
+    transition-duration: 250ms;
+    transition-property: filter, opacity;
+    &:hover {
+      filter: invert(0.1) blur(0px);
+      opacity: 0.4;
+    }
+  }
 }
