--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -5,12 +5,14 @@
   display: flex;
   touch-action: pan-x pinch-zoom;
   margin-top: 10px;
-  height: 200px;
+  height: 380px;
   flex-direction: column;
+  align-items: center;
 }
 .slide {
   transform: translate3d(0, 0, 0);
   flex: 0 0 100%;
   min-height: 0;
   padding-top: 0rem;
+  height: 300px;
 }
