--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -104,7 +104,7 @@
     }
     @keyframes titleArrow {
       0% {
-        background-color: #fff;
+        background-color: #ffffff60;
       }
       50% {
         background-color: transparent;
