remove duplicate item in portfolio.ts

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -17,6 +17,7 @@
     opacity: 0.3;
     transition-duration: 250ms;
     transition-property: filter, opacity;
+    z-index: -1;
     &:hover {
       filter: invert(0.1) blur(0px);
       opacity: 0.4;
