--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -5,6 +5,10 @@
   overflow: hidden;
   position: relative;
   transform: translate3d(4px, 7px, 0px);
+  h4 {
+    color: #fff;
+    font-size: 20px;
+  }
   .cover {
     position: absolute;
     top: 0;
@@ -18,7 +22,9 @@
     transition-duration: 250ms;
     transition-property: filter, opacity;
     z-index: -1;
-    &:hover {
+  }
+  &:hover {
+    .cover {
       filter: invert(0.1) blur(0px);
       opacity: 0.4;
     }
