--- a/src/components/List/list.module.scss
+++ b/src/components/List/list.module.scss
@@ -1,5 +1,6 @@
 .list-container {
-    width: 100%;
+    width: 460px;
+    margin: auto;
     height: 400px;
     position: relative;
     .dopdots {
