--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -41,12 +41,12 @@
   display: flex;
   flex-direction: column;
   top: 5px;
-  left: -32px;
+  left: -8px;
   height: 405px;
   flex-wrap: wrap-reverse;
   .dot {
-    width: 11px;
-    height: 11px;
+    width: 8.8275px;
+    height: 8.8275px;
     border: 0;
     margin-bottom: 5px;
     margin-right: 5px;
@@ -55,7 +55,7 @@
     padding: 0;
     cursor: pointer;
     &.active {
-      background-color: #fff;
+      background-color: #ffffff77;
     }
   }
 }
