Add style for filter buttons

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -9,6 +9,13 @@
     color: #fff;
     font-size: 21px;
   }
+  .createdat {
+    position: absolute;
+    bottom: 0;
+    left: 12px;
+    background: #363c4f;
+    padding: 4px;
+  }
   .cover {
     position: absolute;
     top: 0;
