--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -39,18 +39,28 @@
 .filters {
   position: absolute;
   z-index: 1;
+  bottom: 0;
+  left: 150px;
+  button {
+    border: 0;
+    background-color: #363c4f;
+    font-family: "League Gothic";
+    letter-spacing: 1px;
+    font-size: 15px;
+    cursor: pointer;
+  }
 }
 .dots {
   position: absolute;
   display: flex;
   flex-direction: column;
   top: 5px;
-  left: -8px;
+  right: 427px;
   height: 405px;
   flex-wrap: wrap-reverse;
   .dot {
-    width: 8.8275px;
-    height: 8.8275px;
+    width: 9px;
+    height: 9px;
     border: 0;
     margin-bottom: 5px;
     margin-right: 5px;
