Fixed layout style issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
+
 #root {
   max-width: 880px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
