--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -26,12 +26,16 @@
     border: 0;
     background: #474c5d;
     padding: 4px 6px;
+    width: 28px;
+    height: 27px;
     svg {
-      opacity: 0.8;
+      width: 14px;
+      height: 14px;
+      opacity: 0.7;
     }
     &:disabled {
       svg {
-        opacity: 0.3;
+        opacity: 0.25;
       }
     }
   }
@@ -45,8 +49,9 @@
     border: 0;
     background-color: #363c4f;
     font-family: "League Gothic";
+    text-transform: uppercase;
     letter-spacing: 1px;
-    font-size: 13px;
+    font-size: 12px;
     margin-right: 12px;
     width: 48px;
     height: 20px;
@@ -56,7 +61,7 @@
       width: 70px;
     }
     &.active {
-      color: #fff;
+      color: #6ddba9;
     }
   }
 }
