--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,6 +7,8 @@
     position: relative;
     width: fit-content;
     height: 66px;
+    margin-bottom: 40px;
+    margin-top: -40px;
     letter-spacing: 1px;
     line-height: 58px;
     color: #6ddba9;
