--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -30,7 +30,7 @@
       color: #fff;
     }
   }
-  .member {
+  .member, .design {
     background-color: #ffffff22;
     height: 27px;
     display: flex;
@@ -43,6 +43,20 @@
       width: 20px;
       height: 20px;
       margin-right: 4px;
+    }
+    span {
+      position: absolute;
+      opacity: 0;
+      visibility: hidden;
+      top: -15px;
+      transition-property: opacity, visibility;
+      transition-duration: 170ms;
+    }
+    &:hover {
+      span {
+        opacity: 1;
+        visibility: visible;
+      }
     }
   }
   .createdat {
