--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -7,11 +7,25 @@
   transform: translate3d(0px, 5px, 0px);
   h4 {
     color: #fff;
-    font-size: 21px;
+    font-size: 24px;
+    margin-top: 48px;
+    cursor: default;
+    letter-spacing: 0.5px;
+  }
+  .type {
+    position: absolute;
+    top: 12px;
+    right: 14px;
+    box-shadow: 0 0 0 2px #474c5d;
+    padding: 2px 6px;
+    cursor: default;
+  }
+  .description {
+    position: absolute;
   }
   .badges {
     position: absolute;
-    bottom: 10px;
+    bottom: 40px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -30,7 +44,8 @@
       color: #fff;
     }
   }
-  .member, .design {
+  .member,
+  .design {
     background-color: #ffffff22;
     height: 27px;
     display: flex;
@@ -39,6 +54,7 @@
     align-items: center;
     padding: 0px 4px;
     text-transform: uppercase;
+    cursor: default;
     svg {
       width: 20px;
       height: 20px;
@@ -48,6 +64,7 @@
       position: absolute;
       opacity: 0;
       visibility: hidden;
+      white-space: pre;
       top: -15px;
       transition-property: opacity, visibility;
       transition-duration: 170ms;
@@ -76,15 +93,42 @@
     background-size: cover;
     transform: scale3d(1.4, 1.4, 1);
     filter: invert(0.6) blur(0.3px);
-    opacity: 0.3;
+    opacity: 0.65;
     transition-duration: 250ms;
     transition-property: filter, opacity;
     z-index: -1;
   }
   &:hover {
     .cover {
+      animation-name: coverGlitch;
+      animation-duration: 200ms;
+      animation-timing-function: linear;
+      animation-iteration-count: 1;
       filter: invert(0.1) blur(0px);
-      opacity: 0.4;
+      opacity: 0.45;
     }
   }
+  @keyframes coverGlitch {
+    0% {
+      filter: invert(0.9) blur(1px);
+      opacity: 0.3;
+    }
+    25% {
+      filter: invert(0.1) blur(0px) hue-rotate(180deg);
+      opacity: 0.7;
+    }
+    50% {
+      filter: invert(0.1) blur(0px) hue-rotate(45deg);
+      opacity: 0.7;
+    }
+    75% {
+      filter: invert(0.1) blur(0px) hue-rotate(90deg) brightness(5);
+      opacity: 0.4;
+    }
+    100% {
+      filter: invert(0.1) blur(0px);
+      opacity: 0.45;
+    }
+  }
+
 }
