--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -39,12 +39,26 @@
     position: absolute;
     top: 12px;
     right: 14px;
-    box-shadow: 0 0 0 2px #474c5d;
+    box-shadow: 0 0 0 2px #474c5d, 0 0 0 1px #474c5d inset;
     padding: 2px 6px;
     cursor: default;
   }
   .description {
     position: absolute;
+    bottom: 4px;
+    left: 4px;
+    .tech {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      font-family: monospace;
+      svg {
+        margin-right: 10px;
+        width: 18px;
+        height: 18px;
+      }
+    }
   }
   .badges {
     position: absolute;
