--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -41,6 +41,7 @@
     right: 14px;
     box-shadow: 0 0 0 2px #474c5d, 0 0 0 1px #474c5d inset;
     padding: 2px 6px;
+    text-transform: uppercase;
     cursor: default;
   }
   .description {
@@ -48,13 +49,18 @@
     bottom: 4px;
     left: 4px;
     .tech {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 14px;
+      font-size: 11px;
       font-family: monospace;
+      padding-left: 26px;
+      padding-right: 14px;
+      text-align: left;
       svg {
-        margin-right: 10px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        top: 0;
+        opacity: 0.875;
+        margin: auto;
         width: 18px;
         height: 18px;
       }
@@ -62,7 +68,7 @@
   }
   .badges {
     position: absolute;
-    bottom: 40px;
+    bottom: 60px;
     width: 100%;
     display: flex;
     justify-content: space-between;
