--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -1,5 +1,5 @@
 .card {
-  background-color: #000000f0;
+  background-color: rgb(54 60 79);
   width: 380px;
   height: 345px;
   overflow: hidden;
@@ -133,13 +133,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
+    object-fit: cover;
     transform: scale3d(1.4, 1.4, 1);
     filter: invert(0.6) blur(0.3px);
     opacity: 0.65;
     transition-duration: 250ms;
     transition-property: filter, opacity;
     z-index: -1;
+  }
+  .image-loading {
+    position: absolute;
   }
   &:hover {
     .cover {
