--- a/src/components/List/list.module.scss
+++ b/src/components/List/list.module.scss
@@ -3,10 +3,25 @@
     margin: auto;
     height: 400px;
     position: relative;
+    animation-name: list;
+    animation-duration: 2000ms;
+    animation-iteration-count: 1;
+    opacity: 1;
     .dopdots {
         position: absolute;
         right: 0;
         left: 0;
         margin: auto;
+    }
+    @keyframes list {
+        0% {
+            opacity: 0;
+        }
+        80% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
 }
