--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -73,7 +73,7 @@
     display: flex;
     justify-content: space-between;
   }
-  a {
+  .link {
     width: 56px;
     height: 27px;
     color: #ffffff9e;
@@ -85,6 +85,25 @@
     transition-duration: 150ms;
     &:hover {
       color: #fff;
+    }
+  }
+  .image-link {
+    position: absolute;
+    z-index: 1;
+    top: 12px;
+    left: 14px;
+    width: 50px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 1px 0 0 #fff;
+    svg {
+      width: 24px;
+      height: 24px;
+      path {
+        fill: #fff;
+      }
     }
   }
   .member,
