--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -69,7 +69,7 @@
   .badges {
     position: absolute;
     bottom: 60px;
-    width: 100%;
+    width: calc(100% + 1px);
     display: flex;
     justify-content: space-between;
   }
@@ -98,13 +98,6 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0px 1px 0 0 #fff;
-    svg {
-      width: 24px;
-      height: 24px;
-      path {
-        fill: #fff;
-      }
-    }
   }
   .member,
   .design {
