--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -97,7 +97,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 1px 0 0 #fff;
+    box-shadow: 0px 2px 0 0 #ffffff31;
+    transition-property: box-shadow;
+    transition-duration: 150ms;
+    &:hover {
+      box-shadow: 0px 2px 0 0 #ffffff8d;
+    }
   }
   .member,
   .design {
