--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -8,7 +8,8 @@
   h4 {
     color: #fff;
     font-size: 24px;
-    margin-top: 48px;
+    margin-top: 88px;
+    margin-bottom: 0;
     cursor: default;
     letter-spacing: 0.5px;
     position: relative;
