add dopdots in main

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
   align-items: center;
   justify-content: center;
 }
+#root main > canvas {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  opacity: 0.3;
+}
