--- a/src/components/EyeIcon/eyeIcon.module.scss
+++ b/src/components/EyeIcon/eyeIcon.module.scss
@@ -8,7 +8,7 @@
   }
   .circle-eye {
     transform-origin: center center;
-    fill: #6ddba9;
+    fill: #fff;
     transition-duration: 200ms;
     transition-property: transform;
     transition-timing-function:ease-out;
