--- a/src/components/List/list.module.scss
+++ b/src/components/List/list.module.scss
@@ -7,6 +7,7 @@
     animation-duration: 2000ms;
     animation-iteration-count: 1;
     opacity: 1;
+    transform: translate(6px, -2px);
     .dopdots {
         position: absolute;
         right: 0;
