--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -3,7 +3,6 @@
 }
 .container {
   display: flex;
-  touch-action: pan-x pinch-zoom;
   margin-top: 10px;
   height: 380px;
   flex-direction: column;
@@ -70,9 +69,30 @@
   display: flex;
   flex-direction: column;
   top: 5px;
-  right: 427px;
-  height: 405px;
+  right: 428px;
+  height: 401px;
   flex-wrap: wrap-reverse;
+  background-color: #363c4f;
+  min-width: 20px;
+  width: max-content;
+  padding-right: 3px;
+  // &:before {
+  //   position: absolute;
+  //   width: 47px;
+  //   content: "";
+  //   background-color: #363c4f;
+  //   height: calc(100% - 8px);
+  //   z-index: -1;
+  // }
+  // &:after {
+  //   content: "";
+  //   position: absolute;
+  //   width: 16px;
+  //   height: 285px;
+  //   background-color: #363c4f;
+  //   left: -27px;
+  //   z-index: -1;
+  // }
   .dot {
     width: 9px;
     height: 9px;
@@ -89,7 +109,7 @@
       background-color: #ffffff77;
       animation-name: activeDot;
       animation-iteration-count: 1;
-      transform: translate3d(0px,0px,0px);
+      transform: translate3d(0px, 0px, 0px);
       animation-duration: 100ms;
     }
   }
