--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -60,6 +60,12 @@
       50% {
         color: #363c4f
       }
+      55% {
+        color: #47506c;
+      }
+      56% {
+        color: #363c4f;
+      }
       100% {
         color: #363c4f;
       }
