--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 #root {
   max-width: 880px;
   margin: 0 auto;
@@ -16,4 +15,25 @@
   right: 0;
   top: 0;
   opacity: 0.3;
+}
+
+#root main .desktop-only {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background: #363c4f;
+  height: 100%;
+  z-index: 99;
+  padding-top: 18%;
+  font-size: 20px;
+  display: none;
+  opacity: 0;
+}
+
+@media screen and (max-width: 670px) {
+  #root main .desktop-only {
+    display: block;
+    opacity: 1;
+  }
 }
