--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -32,7 +32,6 @@
     }
     &:before {
       bottom: 13px;
-
     }
     &:after {
       top: 9px;
@@ -44,21 +43,20 @@
       width: 614px;
       height: 38px;
       background-color: #fff;
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
       opacity: 0;
       z-index: -2;
       animation-name: titleBg;
       animation-duration: 1250ms;
       animation-iteration-count: 1;
       animation-timing-function: linear;
-
     }
     @keyframes title {
       0% {
         color: #363c4f;
       }
       50% {
-        color: #363c4f
+        color: #363c4f;
       }
       55% {
         color: #47506c;
@@ -119,6 +117,42 @@
       }
       100% {
         background-color: #fff;
+      }
+    }
+  }
+  @media screen and (max-width: 650px) {
+    h1 {
+      font-size: 55px;
+      &:before {
+        bottom: 15px;
+      }
+      &:after {
+        top: 12px;
+      }
+      span {
+        height: 32px;
+        width: 489px;
+        top: 15px;
+      }
+    }
+  }
+  @media screen and (max-width: 500px) {
+    h1 {
+      font-size: 38px;
+      white-space: pre;
+      &:before {
+        bottom: 20px;
+      }
+      &:after {
+        right: 0;
+        width: 100%;
+        top: 17px;
+      }
+      span {
+        height: 24px;
+        width: 342px;
+        top: 17px;
+        left: 2px;
       }
     }
   }
