add svg loading for image in card component

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -167,6 +167,12 @@
   }
   .image-loading {
     position: absolute;
+    right: 0;
+    left: 0;
+    svg {
+      width: 80px;
+      height: 80px;
+    }
   }
   &:hover {
     .cover {
